# LACHESIS

./: AUTHORS  COPYING  ChangeLog  ChromLinkMatrix.cc  ChromLinkMatrix.h  ClusterVec.cc  ClusterVec.h  ContigOrdering.cc  ContigOrdering.h  CountMappables.pl  CountMotifsInFasta.pl  CreateScaffoldedFasta.pl  GenomeLinkMatrix.cc  GenomeLinkMatrix.h  Lachesis.cc  LinkSizeDistribution.cc  LinkSizeDistribution.h  Makefile  Makefile.am  Makefile.in  NEWS  PreprocessSAMs.pl  PreprocessSAMs.sh  QuickDotplot  QuickDotplot.POA.R  QuickDotplot.R  QuickDotplot.SKY.R  README.gmi.txt  README.md  README.txt  Reporter.cc  Reporter.h  RunParams.cc  RunParams.h  TextFileParsers.cc  TextFileParsers.h  TrueMapping.cc  TrueMapping.h  aclocal.m4  blast.qsub.sh  (+14 more)
INIs/: fly.ini  mouse.ini  postfosmid.ini  prefosmid.ini  sim_bins.ini  test_case.ini
gnu_modulefile/: lachesis
include/: Makefile  ParsedArgs.h  TimeMem.cc  TimeMem.h
include/gtools/: ChromInterval.cc  ChromInterval.h  CopyNumberProfile.cc  CopyNumberProfile.h  FileParsers.cc  FileParsers.h  HumanGenome.cc  HumanGenome.h  Makefile  N50.cc  N50.h  SAMStepper.cc  SAMStepper.h  VCF_variant_info.h
include/markov/: HMM.cc  HMM.h  Makefile  MarkovChain.cc  MarkovChain.h  MarkovModel.cc  MarkovModel.h  SymbolSet.cc  SymbolSet.h  TestMarkovModel.cc  WDAG.cc  WDAG.h
m4/: ax_lib_samtools.m4
src/: ChromLinkMatrix.cc  ChromLinkMatrix.h  ClusterVec.cc  ClusterVec.h  ContigOrdering.h  GenomeLinkMatrix.cc  GenomeLinkMatrix.h  LinkSizeDistribution.cc  LinkSizeDistribution.h  Makefile.am  Makefile.in  Reporter.h  RunParams.h  TextFileParsers.cc  TextFileParsers.h  TrueMapping.cc  TrueMapping.h  config.h  config.h.in  splash_screen.txt
src/include/: Makefile  Makefile.am  Makefile.in  ParsedArgs.h  PerlRunTime.pm  TimeMem.h  bam.h  bgzf.h  faidx.h
src/include/gtools/: ChromInterval.cc  ChromInterval.h  CopyNumberProfile.cc  CopyNumberProfile.h  FileParsers.cc  FileParsers.h  HumanGenome.cc  Makefile  Makefile.am  Makefile.bak  Makefile.in  N50.cc  SAMStepper.cc  SAMStepper.h  VCF_variant_info.h
src/include/markov/: ENm008.aln  HMM.cc  HMM.h  Makefile  Makefile.am  Makefile.bak  Makefile.in  MarkovChain.cc  MarkovChain.h  MarkovModel.cc  MarkovModel.h  README  SymbolSet.cc  SymbolSet.h  TestMarkovModel  TestMarkovModel.cc  WDAG.cc  WDAG.h  anc_rep_counts.txt  codon1_2_counts.txt
src/include/samtools/: bam2depth.c  bam_plcmd.c  samtools
src/include/samtools/.pc/: applied-patches
src/include/samtools/bcftools/: bcftools
src/include/samtools/debian/: README.Debian  changelog  control  copyright  gbp.conf  libbam-dev.doc  libbam-dev.install  reference  rules
src/include/samtools/debian/patches/: fix_coverage_cap.patch  fix_example_makefile.patch  fix_segfault_with_small_ref.patch
src/include/samtools/debian/upstream/: metadata
src/include/samtools/examples/: Makefile
src/include/samtools/misc/: ace2sam  bamcheck  maq2sam-long  maq2sam-short  md5fa  md5sum-lite  wgsim
test_case/SAMs/: SRR400260.sample.flagstat  SRR442155.sample.flagstat  SRR442157.sample.flagstat
test_case/draft_assembly/: assembly.105.blast.out  assembly.108.blast.out  assembly.117.blast.out  assembly.118.blast.out  assembly.12.blast.out  assembly.120.blast.out  assembly.129.blast.out  assembly.13.blast.out  assembly.138.blast.out  assembly.14.blast.out  assembly.144.blast.out  assembly.147.blast.out  assembly.159.blast.out  assembly.16.blast.out  assembly.160.blast.out  assembly.161.blast.out  assembly.17.blast.out  assembly.172.blast.out  assembly.177.blast.out  assembly.180.blast.out  assembly.182.blast.out  assembly.20.blast.out  assembly.28.blast.out  assembly.30.blast.out  assembly.31.blast.out  assembly.37.blast.out  assembly.4.blast.out  assembly.42.blast.out  assembly.44.blast.out  assembly.52.blast.out  assembly.53.blast.out  assembly.54.blast.out  assembly.56.blast.out  assembly.65.blast.out  assembly.67.blast.out  assembly.70.blast.out  assembly.76.blast.out  assembly.78.blast.out  assembly.8.blast.out  assembly.83.blast.out  (+2 more)
test_case/hg19/: Homo_sapiens_assembly19.fasta.names
